make the setting modal responsive and fix overflow scroll on smaller screens

--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -1,12 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
+html {
+  overflow-x: hidden;
+  height: 100%;
+}
+
 body {
+  width: 100%;
+  height: 100%;
   margin: 0px;
   color: black;
   font-family: 'grInter';
   font-weight: bold;
   overflow-x: hidden;
-  width: 100%;
+  position: relative;
 }
 
 /* top-bar */
@@ -450,6 +457,8 @@ select {
 
 /* NoteCard-end */
 
+/* Operation profile */
+
 .OperationProfile {
   height: auto;
   width: 100%;
@@ -631,6 +640,35 @@ select {
   padding: 0px 10px;
   font-size: 13px;
 }
+
+.SettingsModal-Container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0px;
+}
+
+.SettingsModal-Container div {
+  width: 50%;
+}
+
+.SettingsModal-Container h4 {
+  font-size: 19px;
+}
+
+.SettingsModal-Container p {
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.SettingsModal-Container button {
+  display: block;
+  margin-left: auto;
+  margin-top: 30px;
+  width: 40%;
+  height: 50px;
+}
+
+/* Operation profile end */
 
 /*Login page*/
 
@@ -831,13 +869,32 @@ select {
   }
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 600px) {
   .OperationCardContainer {
     width: 90%;
   }
 
   .OperationCard-name {
     font-size: 20px;
+  }
+
+  .SettingsModal-Container div {
+    width: 95%;
+  }
+
+  .SettingsModal-Container h4 {
+    font-size: 18px;
+  }
+
+  .SettingsModal-Container p {
+    font-size: 14px;
+  }
+
+  .SettingsModal-Container button {
+    margin-right: auto;
+    margin-left: 5px;
+    margin-top: 0px;
+    width: 90%;
   }
 
   .TargetCardContainer {
